--- a/templates/apps/product/checkout.html
+++ b/templates/apps/product/checkout.html
@@ -1,12 +1,12 @@
 {% extends 'apps/base.html' %}
-
+{% load static %}
 {% block content %}
     <div class="row g-3">
         <div class="col-xl-4 order-xl-1">
             <div class="card">
                 <div class="card-header bg-light btn-reveal-trigger d-flex flex-between-center">
                     <h5 class="mb-0">Order Summary</h5><a class="btn btn-link btn-sm btn-reveal text-600"
-                                                          href="../../app/e-commerce/shopping-cart.html"><span
+                                                          href="{% url 'cart_page' %}"><span
                         class="fas fa-pencil-alt"></span></a>
                 </div>
                 <div class="card-body">
@@ -58,7 +58,8 @@
                         <div class="col-sm-auto">
                             <h5 class="mb-2 mb-sm-0">Your Shipping Address</h5>
                         </div>
-                        <div class="col-sm-auto"><a class="btn btn-falcon-default btn-sm" href="#!"><span
+                        <div class="col-sm-auto"><a class="btn btn-falcon-default btn-sm"
+                                                    href="{% url 'create_address' %}"><span
                                 class="fas fa-plus me-2" data-fa-transform="shrink-2"></span>Add New Address </a></div>
                     </div>
                 </div>
@@ -71,20 +72,20 @@
                                 <label class="form-check-label mb-0 fw-bold d-block" for="address-1">Antony Hopkins<span
                                         class="radio-select-content"><span> 2392 Main Avenue,<br/>Pensaukee,<br/>New Jersey 02139<span
                                         class="d-block mb-0 pt-2">+(856) 929-229</span></span></span></label><a
-                                    class="fs--1" href="#!">Edit</a>
+                                    class="fs--1" href="{% url 'update_address' 2 %}">Edit</a>
                             </div>
                         </div>
-                        <div class="col-md-6">
-                            <div class="position-relative">
-                                <div class="form-check mb-0 custom-radio radio-select">
-                                    <input class="form-check-input" id="address-2" type="radio" name="clientName"/>
-                                    <label class="form-check-label mb-0 fw-bold d-block" for="address-2">Robert
-                                        Bruce<span class="radio-select-content"><span>3448 Ile De France St #242<br/>Fort Wainwright, <br/>Alaska, 99703<span
-                                                class="d-block mb-0 pt-2">+(901) 637-734</span></span></span></label><a
-                                        class="fs--1" href="#!">Edit</a>
-                                </div>
-                            </div>
-                        </div>
+                        {#                        <div class="col-md-6">#}
+                        {#                            <div class="position-relative">#}
+                        {#                                <div class="form-check mb-0 custom-radio radio-select">#}
+                        {#                                    <input class="form-check-input" id="address-2" type="radio" name="clientName"/>#}
+                        {#                                    <label class="form-check-label mb-0 fw-bold d-block" for="address-2">Robert#}
+                        {#                                        Bruce<span class="radio-select-content"><span>3448 Ile De France St #242<br/>Fort Wainwright, <br/>Alaska, 99703<span#}
+                        {#                                                class="d-block mb-0 pt-2">+(901) 637-734</span></span></span></label><a#}
+                        {#                                        class="fs--1" href="{% url 'update_address' 1%}">Edit</a>#}
+                        {#                                </div>#}
+                        {#                            </div>#}
+                        {#                        </div>#}
                     </div>
                 </div>
             </div>
@@ -127,20 +128,22 @@
                             <div class="col-4 ps-3 text-center pt-2 d-none d-sm-block">
                                 <div class="rounded-1 p-2 mt-3 bg-100">
                                     <div class="text-uppercase fs--2 fw-bold">We Accept</div>
-                                    <img src="../../assets/img/icons/icon-payment-methods-grid.png" alt="" width="120"/>
+                                    <img src="{% static 'apps/assets/img/icons/icon-payment-methods-grid.png' %}" alt=""
+                                         width="120"/>
                                 </div>
                             </div>
                         </div>
                         <div class="form-check d-flex align-items-center">
                             <input class="form-check-input" type="radio" value="" id="paypal" name="payment-method"/>
                             <label class="form-check-label mb-0 ms-2" for="paypal"><img
-                                    src="../../assets/img/icons/icon-paypal-full.png" height="20" alt=""/>
+                                    src="{% static 'apps/assets/img/icons/icon-paypal-full.png' %}" height="20" alt=""/>
                             </label>
                         </div>
                         <div class="border-dashed-bottom my-5"></div>
                         <div class="row">
                             <div class="col-md-7 col-xl-12 col-xxl-7 px-md-3 mb-xxl-0 position-relative">
-                                <div class="d-flex"><img class="me-3" src="../../assets/img/icons/shield.png" alt=""
+                                <div class="d-flex"><img class="me-3"
+                                                         src="{% static 'apps/assets/img/icons/shield.png' %}" alt=""
                                                          width="60" height="60"/>
                                     <div class="flex-1">
                                         <h5 class="mb-2">Buyer Protection</h5>
