--- a/templates/apps/product/shopping-cart.html
+++ b/templates/apps/product/shopping-cart.html
@@ -13,7 +13,7 @@
                             <span class="fas fa-chevron-left me-1" data-fa-transform="shrink-4"></span>
                             Continue Shopping
                         </a>
-                        <a class="btn btn-sm btn-primary" href="../../app/e-commerce/checkout.html">Checkout</a>
+                        <a class="btn btn-sm btn-primary" href="{% url 'checkout_page' %}">Checkout</a>
                     </div>
                 </div>
             </div>
@@ -104,7 +104,7 @@
                 {#                    <button class="btn btn-outline-secondary border-300 btn-sm" type="submit">Apply</button>#}
                 {#                </div>#}
                 {#            </form>#}
-                <a class="btn btn-sm btn-primary" href="../../app/e-commerce/checkout.html">Checkout</a>
+                <a class="btn btn-sm btn-primary" href="{% url 'checkout_page' %}">Checkout</a>
             </div>
         </div>
 
