--- a/templates/apps/address/update-address.html
+++ b/templates/apps/address/update-address.html
@@ -1,7 +1,7 @@
 {% extends 'apps/base.html' %}
 
 {% block content %}
-    <form method="post" action="{% url 'create_address' %}">
+    <form method="post" action="{% url 'update_address' address.pk %}">
         {% csrf_token %}
         <div class="form-group">
             <label for="city">City</label>
