--- a/templates/apps/product/product-details.html
+++ b/templates/apps/product/product-details.html
@@ -1,5 +1,6 @@
 {% extends 'apps/product/../base.html' %}
 {% load static %}
+{% load custom_tags %}
 
 {% block content %}
     <div class="card mb-3">
@@ -29,11 +30,14 @@
                 <div class="col-lg-6">
                     <h5>{{ product.name }}</h5><a class="fs--1 mb-2 d-block"
                                                   href="{% url 'list_view' %}?category={{ product.category.slug }}">{{ product.category }}</a>
-                    <div class="fs--2 mb-3 d-inline-block text-decoration-none"><span
-                            class="fa fa-star text-warning"></span><span class="fa fa-star text-warning"></span><span
-                            class="fa fa-star text-warning"></span><span class="fa fa-star text-warning"></span><span
-                            class="fa fa-star-half-alt text-warning star-icon"></span><span
-                            class="ms-1 text-600">({{ product.review_num }})</span>
+                    <div class="fs--2 mb-3 d-inline-block text-decoration-none">
+                        {% for i in avg_rating|custom_range %}
+                            <span class="fa fa-star text-warning star-icon"></span>
+                        {% endfor %}
+                        {% for i in blank_star|custom_range %}
+                            <span class="far fa-star text-warning star-icon"></span>
+                        {% endfor %}
+                        <span class="ms-1 text-600">({{ product.review_num }})</span>
                     </div>
                     <p class="fs--1">{{ product.about|safe }}</p>
                     <h4 class="d-flex align-items-center"><span
@@ -77,7 +81,6 @@
 
                             <div class="col-auto px-2 px-md-3">
                                 <a class="btn btn-sm btn-primary" href="
-                                        
                                         {% if user.is_authenticated %}{% url 'add_to_cart' product.pk %}{% else %}{% url 'login_page' %}{% endif %}">
                                     <span class="fas fa-cart-plus me-sm-2"></span>
                                     <span class="d-none d-sm-inline-block">Add To Cart</span>
@@ -94,9 +97,16 @@
                                                       data-bs-toggle="tooltip" data-bs-placement="top"
                                                       title="Add to Wish List"><span
                                 class="far fa-heart me-1"></span>282</a>
+
                         </div>
-                        </div>
+{#                        <a class="btn btn-sm btn{% if not user|is_liked:product %}-outline{% endif %}-danger border-300" href="{% url 'add_favorite' product.id %}"#}
+                        {#                               data-bs-toggle="tooltip" data-bs-placement="top"#}
+                        {#                               title="Add to Wish List">#}
+                        {#                            <span class="far fa-heart me-1"></span>#}
+                        {#                                {{ product.favorite_set.count }}#}
+                        {#                            </a>#}
                     {% endif %}
+                </div>
             </div>
         </div>
         <div class="row">
@@ -140,37 +150,47 @@
                         <div class="tab-pane fade" id="tab-reviews" role="tabpanel" aria-labelledby="reviews-tab">
                             <div class="row mt-3">
                                 <div class="col-lg-6 mb-4 mb-lg-0">
-                                    {% for review in product.review_set.all %}
-                                        <div class="mb-1"><span class="fa fa-star text-warning fs--1"></span><span
-                                                class="fa fa-star text-warning fs--1"></span><span
-                                                class="fa fa-star text-warning fs--1"></span><span
-                                                class="fa fa-star text-warning fs--1"></span><span
-                                                class="fa fa-star text-warning fs--1"></span><span
-                                                class="ms-3 text-dark fw-semi-bold">{{ review.name }}</span>
+                                    {% for review in product.product_review.all %}
+                                        <div class="mb-1">
+                                            {% for i in avg_rating|custom_range %}
+                                                <span class="fa fa-star text-warning star-icon"></span>
+                                            {% endfor %}
+                                            {% for i in blank_star|custom_range %}
+                                                <span class="far fa-star text-warning star-icon"></span>
+                                            {% endfor %}
+                                            <span class="ms-1 text-600">({{ product.review_num }})</span>
+                                            <span class="ms-3 text-dark fw-semi-bold">{{ review.name }}</span>
                                         </div>
-                                        <p class="fs--1 mb-2 text-600">By Drik Smith • {{ product.created_at }}</p>
+                                        <p class="fs--1 mb-2 text-600">
+                                            {{ review.user.get_full_name }}
+                                            • {{ product.created_at }}</p>
                                         <p class="mb-0">{{ review.review_text }}</p>
                                         <hr class="my-4"/>
                                     {% endfor %}
                                 </div>
                                 <div class="col-lg-6 ps-lg-5">
-                                    <form>
+                                    <form action="{% url 'create_review' %}" method="post">
+                                        {% csrf_token %}
                                         <h5 class="mb-3">Write your Review</h5>
+
                                         <div class="mb-3">
-                                            <label class="form-label">Ratting: </label>
-                                            <div class="d-block" data-rater='{"starSize":32,"step":0.5}'></div>
+                                            <label class="form-label">Rating: </label>
+                                            <div class="d-block" id="ratingStars"
+                                                 data-rater='{"starSize":32,"step":1}'></div>
+                                            <input type="hidden" id="ratingInput" name="rating" value="">
                                         </div>
                                         <div class="mb-3">
-                                            <label class="form-label" for="formGroupNameInput">Name:</label>
-                                            <input class="form-control" id="formGroupNameInput" type="text"/>
+                                            <label class="form-label" for="name">Name:</label>
+                                            <input class="form-control" id="name" type="text" name="name"/>
                                         </div>
                                         <div class="mb-3">
-                                            <label class="form-label" for="formGroupEmailInput">Email:</label>
-                                            <input class="form-control" id="formGroupEmailInput" type="email"/>
+                                            <label class="form-label" for="email_address">Email:</label>
+                                            <input class="form-control" id="email_address" name="email_address"
+                                                   type="email"/>
                                         </div>
                                         <div class="mb-3">
-                                            <label class="form-label" for="formGrouptextareaInput">Review:</label>
-                                            <textarea class="form-control" id="formGrouptextareaInput"
+                                            <label class="form-label" for="review_text">Review:</label>
+                                            <textarea class="form-control" id="review_text" name="review_text"
                                                       rows="3"></textarea>
                                         </div>
                                         <button class="btn btn-primary" type="submit">Submit</button>
@@ -182,5 +202,6 @@
                 </div>
             </div>
         </div>
-    </div> </div>
+    </div></div>
+    <script src="{% static 'apps/assets/js/theme.js' %}"></script>
 {% endblock %}
