--- a/templates/apps/product/product-list.html
+++ b/templates/apps/product/product-list.html
@@ -123,14 +123,14 @@
                                                     class="btn btn-sm btn-outline-secondary border-300 d-lg-block me-2 me-lg-0"
                                                     href="#!"><span class="far fa-heart"></span><span
                                                     class="ms-2 d-none d-md-inline-block">Favourite</span></a>
-
-                                                <a class="btn btn-sm btn-primary d-lg-block mt-lg-2" href="
-                                                        {% if user.is_authenticated %}{% url 'add_to_cart' product.pk %}{% else %}{% url 'login_page' %}{% endif %}">
+                                                {% if product.quantity > 0 %}
+                                                    <a class="btn btn-sm btn-primary d-lg-block mt-lg-2" href="
+                                                            {% if user.is_authenticated %}{% url 'add_to_cart' product.pk %}{% else %}{% url 'login_page' %}{% endif %}">
                                                     <span
                                                             class="fas fa-cart-plus" href="#a"> </span><span
-                                                        class="ms-2 d-none d-md-inline-block">Add to Cart</span>
-                                                </a>
-
+                                                            class="ms-2 d-none d-md-inline-block">Add to Cart</span>
+                                                    </a>
+                                                {% endif %}
                                             </div>
                                         </div>
                                     </div>
