--- a/templates/apps/base.html
+++ b/templates/apps/base.html
@@ -187,6 +187,16 @@
                 </li>
             </ul>
             <ul class="navbar-nav navbar-nav-icons ms-auto flex-row align-items-center">
+                {% if user.is_staff or user.is_superuser %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'customers_list' %}">Customers</a>
+                    </li>
+                {% endif %}
+                {% if user.is_authenticated %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{% url 'orders_list' %}">Orders</a>
+                    </li>
+                {% endif %}
                 <li class="nav-item">
                     <div class="theme-control-toggle fa-icon-wait px-2">
                         <input class="form-check-input ms-0 theme-control-toggle-input" id="themeControlToggle"
@@ -344,6 +354,9 @@
                                                  aria-expanded="false">
                     <div class="avatar avatar-xl">
                         <img class="rounded-circle" src="
+                                
+                                
+                                
                                 {% if user.is_authenticated %}{% static 'apps/assets/img/team/3-thumb.png' %}{% else %}https://cdn.create.vista.com/api/media/medium/253405368/stock-vector-vector-remove-user-icon?token={% endif %}"
                              alt=""/>
 
