--- a/templates/apps/orders/order-list.html
+++ b/templates/apps/orders/order-list.html
@@ -66,10 +66,10 @@
                             </td>
                             <td class="order py-2 align-middle white-space-nowrap"><a
                                     href="{% url 'order' order.pk %}">
-                                {% if user.is_superuser or user.is_staff %}
-                                    <strong>#{{ order.pk }}</strong></a>
-                                    by
-                                {% endif %}
+                                {#                                {% if user.is_superuser or u/ser.is_staff %}#}
+                                <strong>#{{ order.pk }}</strong></a>
+                                by
+                                {#                                {% endif %}#}
                                 <strong>{{ order.owner.get_full_name }}</strong><br/><a
                                         href="mailto:{{ order.owner.email }}">{{ order.owner.email }}</a>
                             </td>
@@ -102,31 +102,35 @@
                                         data-fa-transform="shrink-2"></span></span>
                                 </td>
                             {% endif %}
-                            <td class="amount py-2 align-middle text-end fs-0 fw-medium">$99</td>
-                            <td class="py-2 align-middle white-space-nowrap text-end">
-                                <div class="dropdown font-sans-serif position-static">
-                                    <button class="btn btn-link text-600 btn-sm dropdown-toggle btn-reveal"
-                                            type="button"
-                                            id="order-dropdown-0" data-bs-toggle="dropdown" data-boundary="viewport"
-                                            aria-haspopup="true" aria-expanded="false"><span
-                                            class="fas fa-ellipsis-h fs--1"></span></button>
-                                    <div class="dropdown-menu dropdown-menu-end border py-0"
-                                         aria-labelledby="order-dropdown-0">
-                                        <div class="bg-white py-2"><a class="dropdown-item" href="#!">Completed</a><a
-                                                class="dropdown-item" href="#!">Processing</a><a class="dropdown-item"
-                                                                                                 href="#!">On Hold</a><a
-                                                class="dropdown-item" href="#!">Pending</a>
-                                            <div class="dropdown-divider"></div>
-                                            <form action="{% url 'order_delete' order.pk %}" method="post">
-                                                {% csrf_token %}
-                                                <button class="dropdown-item text-danger">
-                                                    Delete
-                                                </button>
-                                            </form>
+                            <td class="amount py-2 align-middle text-end fs-0 fw-medium">${{ order.total.total }}</td>
+                            {% if user.is_superuser or user.is_staff %}
+                                <td class="py-2 align-middle white-space-nowrap text-end">
+                                    <div class="dropdown font-sans-serif position-static">
+                                        <button class="btn btn-link text-600 btn-sm dropdown-toggle btn-reveal"
+                                                type="button"
+                                                id="order-dropdown-0" data-bs-toggle="dropdown" data-boundary="viewport"
+                                                aria-haspopup="true" aria-expanded="false"><span
+                                                class="fas fa-ellipsis-h fs--1"></span></button>
+                                        <div class="dropdown-menu dropdown-menu-end border py-0"
+                                             aria-labelledby="order-dropdown-0">
+                                            <div class="bg-white py-2"><a class="dropdown-item"
+                                                                          href="#!">Completed</a><a
+                                                    class="dropdown-item" href="#!">Processing</a><a
+                                                    class="dropdown-item"
+                                                    href="#!">On Hold</a><a
+                                                    class="dropdown-item" href="#!">Pending</a>
+                                                <div class="dropdown-divider"></div>
+                                                <form action="{% url 'order_delete' order.pk %}" method="post">
+                                                    {% csrf_token %}
+                                                    <button class="dropdown-item text-danger">
+                                                        Delete
+                                                    </button>
+                                                </form>
+                                            </div>
                                         </div>
                                     </div>
-                                </div>
-                            </td>
+                                </td>
+                            {% endif %}
                         </tr>
                     {% endfor %}
                     </tbody>
