--- a/templates/apps/orders/order-list.html
+++ b/templates/apps/orders/order-list.html
@@ -113,12 +113,14 @@
                                                 class="fas fa-ellipsis-h fs--1"></span></button>
                                         <div class="dropdown-menu dropdown-menu-end border py-0"
                                              aria-labelledby="order-dropdown-0">
-                                            <div class="bg-white py-2"><a class="dropdown-item"
-                                                                          href="#!">Completed</a><a
-                                                    class="dropdown-item" href="#!">Processing</a><a
-                                                    class="dropdown-item"
-                                                    href="#!">On Hold</a><a
-                                                    class="dropdown-item" href="#!">Pending</a>
+                                            <div class="bg-white py-2">
+                                                <form action="{% url 'order_update' %}" method="post">
+                                                    {% csrf_token %}
+                                                    <button class="dropdown-item" name="completed">Completed</button>
+                                                    <button class="dropdown-item" name="processing">Processing</button>
+                                                    <button class="dropdown-item" name="on_hold">On Hold</button>
+                                                    <button class="dropdown-item" name="pending">Pending</button>
+                                                </form>
                                                 <div class="dropdown-divider"></div>
                                                 <form action="{% url 'order_delete' order.pk %}" method="post">
                                                     {% csrf_token %}
