--- a/templates/apps/product/product-list.html
+++ b/templates/apps/product/product-list.html
@@ -122,13 +122,13 @@
                                             </div>
 
                                             <div class="mt-2"><a
-                                                    class="btn btn-sm btn-outline-secondary border-300 d-lg-block me-2 me-lg-0"
-                                                    href="#!"><span class="far fa-heart"></span><span
+                                                    {% if user|is_liked:product %}style="background-color: red"{% endif %}
+                                                    class="btn btn-sm btn{% if not user|is_liked:product %}-outline{% endif %}-secondary border-300 d-lg-block me-2 me-lg-0"
+                                                    href="{% url 'favorite_page' product.pk %}"><span
+                                                    class="far fa-heart"></span><span
                                                     class="ms-2 d-none d-md-inline-block">Favourite</span></a>
                                                 {% if product.quantity > 0 %}
                                                     <a class="btn btn-sm btn-primary d-lg-block mt-lg-2" href="
-
-
                                                             {% if user.is_authenticated %}{% url 'add_to_cart' product.pk %}{% else %}{% url 'login_page' %}{% endif %}">
                                                     <span
                                                             class="fas fa-cart-plus" href="#a"> </span><span
