--- a/templates/apps/auth/login.html
+++ b/templates/apps/auth/login.html
@@ -1,6 +1,7 @@
 {% extends 'apps/main_base.html' %}
 
 {% load static %}
+{% load socialaccount %}
 
 {% block main_content %}
     <div class="row flex-center min-vh-100 py-6">
@@ -51,11 +52,21 @@
                         <div class="divider-content-center">or log in with</div>
                     </div>
                     <div class="row g-2 mt-2">
-                        <div class="col-sm-6"><a class="btn btn-outline-google-plus btn-sm d-block w-100" href="#"><span
-                                class="fab fa-google-plus-g me-2" data-fa-transform="grow-8"></span> google</a></div>
-                        <div class="col-sm-6"><a class="btn btn-outline-facebook btn-sm d-block w-100" href="#"><span
-                                class="fab fa-facebook-square me-2" data-fa-transform="grow-8"></span> facebook</a>
+
+                        <div class="col-sm-6">
+                            <a class="btn btn-outline-google-plus btn-sm d-block w-100" href="{% provider_login_url 'google' %}">
+                                <span class="fab fa-google-plus-g me-2" data-fa-transform="grow-8"></span>
+                                google
+                            </a>
                         </div>
+
+                        <div class="col-sm-6">
+                            <a class="btn btn-outline-facebook btn-sm d-block w-100" href="#">
+                                <span class="fab fa-facebook-square me-2" data-fa-transform="grow-8"></span>
+                                facebook
+                            </a>
+                        </div>
+
                     </div>
                 </div>
             </div>
